fixed double overflow

--- a/src/components/main.css
+++ b/src/components/main.css
@@ -27,6 +27,7 @@ box-sizing:inherit;
     margin-top: 31px;
     border-radius: 4px;
     box-shadow: 6px 8px 15px #888888;
+    overflow:auto;
 
 }
 
