--- a/src/components/menu.css
+++ b/src/components/menu.css
@@ -13,7 +13,7 @@ li{
 }
 
 .menu{
-<<<<<<< HEAD
+
 	display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -22,17 +22,13 @@ li{
     background: #AFDDBB;;
     color: white;
     width: 100%;
-    height: 754px;
-    overflow: scroll;
-    overflow-x: hidden;
     box-shadow: 0px 8px 15px #888888;
-=======
 	display: flex; 
 	flex-wrap:wrap;
-	width:700px; 
-	align-self: center;
+	
+	
 
->>>>>>> master
+
 }
 
 .dinnerSel{
@@ -105,7 +101,7 @@ li{
 	width: 821px;
 }
 
-/*.infoBlocks{
+.infoBlocks{
 	display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -151,7 +147,7 @@ li{
 	width: 20px;
 	height:15px;
 	background:purple;
-	}*/
+	}
 .vertRuleApps{
 	border-right: 1px solid black;
     margin-top: -13px;
@@ -187,7 +183,7 @@ li{
 .vertRuleSides{
 	border-right: 1px solid black;
 	margin-top: 18px;
-	/* padding-top: 9px; */
+	padding-top: 9px;
 	margin-left: 82px;
 	height: 37px;
 }
@@ -198,7 +194,7 @@ li{
 
 }
 
-/*.sideInfoBlocks{
+.sideInfoBlocks{
     display: flex;
     float: right;
     margin-right: 44px;
@@ -218,9 +214,9 @@ li{
 
 .sideInfoBlocks>ul>li{
 	margin-left: 2px;
-}*/
+}
 
-/*.sideInfoBlocks>ul>li:nth-child(1){
+.sideInfoBlocks>ul>li:nth-child(1){
 	width: 20px;
 	height: 15px;
 	background:green;
@@ -243,4 +239,4 @@ li{
 	width: 20px;
 	height:15px;
 	background:purple;
-	}*/
+	}
